# climate-crawler

./: .gitignore  crawler.py  main.py  model.py  pyproject.toml  utils.py
raw_data/: obsr_spot_sites.csv
