[tool.poetry]
name = "crop_navigator"
version = "0.1.0"
description = ""
authors = ["seokmin <essemfly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
requests = "^2.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
